@startuml

title __LAB_2's Class Diagram__\n

  namespace  {
    namespace om.example.lab_2 {
      class com.example.lab_2.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      class com.example.lab_2.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        interface com.example.lab_2.model.IFactory {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyAngle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyCircle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyLine {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyPentagon {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyRectangle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        abstract class com.example.lab_2.model.MyShape {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.MyTriangle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_2 {
      namespace model {
        class com.example.lab_2.model.ShapeFactory {
        }
      }
    }
  }
  

  com.example.lab_2.HelloApplication -up-|> javafx.application.Application
  com.example.lab_2.model.MyAngle -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.MyCircle -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.MyLine -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.MyPentagon -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.MyRectangle -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.MyTriangle -up-|> com.example.lab_2.model.MyShape
  com.example.lab_2.model.ShapeFactory .up.|> com.example.lab_2.model.IFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
